select linked (L) crashes Blender when used on isolated edges, marked as seams #46651

Closed
opened 2015-10-31 02:38:03 +01:00 by derek watts · 6 comments

System Information
Win7 64bit, AMD FirePro W5100

Blender Version
Broken: 2.76 48f7dd6
Worked: 2.75

mesh.select_linked_pick() fails when attempting to select edges, unattached to faces, whenever those edges have been marked as seams. In vert select mode, nothing is selected; in edge select mode, Blender crashes.

Exact steps for others to reproduce the error
Default scene/settings > Select cube > Enter edit mode > Enter edge select mode > Select all (A) > Enter edge menu (Ctrl E) > Mark seam (A) > Enter delete menu (X) > Only faces (N) > Mouse over edge > Select linked (L) > Blender crashes

**System Information** Win7 64bit, AMD FirePro W5100 **Blender Version** Broken: 2.76 48f7dd6 Worked: 2.75 mesh.select_linked_pick() fails when attempting to select edges, unattached to faces, whenever those edges have been marked as seams. In vert select mode, nothing is selected; in edge select mode, Blender crashes. **Exact steps for others to reproduce the error** Default scene/settings > Select cube > Enter edit mode > Enter edge select mode > Select all (A) > Enter edge menu (Ctrl E) > Mark seam (A) > Enter delete menu (X) > Only faces (N) > Mouse over edge > Select linked (L) > Blender crashes
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DerekWatts

Added subscriber: @DerekWatts

This issue was referenced by df61c50ffa

This issue was referenced by df61c50ffae9463eafb30b7a3e23b4fcaaca7dbf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Fixed in master but unfortunately this fix wont make it into 2.76a bugfix release (~a day too late).

Fixed in master but unfortunately this fix wont make it into 2.76a bugfix release (~a day too late).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46651
No description provided.