Fix T46651: Select linked crash w/ wire seam edges